--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -1,6 +1,16 @@
-<div class="bills p-2">
-  <div>
-    <h1>Costs</h1>
+<div class="bills p-2" *ngIf="!newBillState">
+  <div class="row">
+    <!--h1>Costs</h1-->
+    <div class="col-md-2 col-sm-6">
+      <h1 class="m-auto"><i class="material-icons">money_off</i> Costs</h1>
+    </div>
+    <div class="col-md-1 col-sm-6">
+      <div class="m-auto">
+        <button mat-button (click)="newBill(true)"><i class="material-icons">swap_vert</i></button>
+      </div>
+    </div>
+    <div class="col-md-9">
+    </div>
   </div>
   <div>
     <h3>Filter by</h3>
@@ -8,26 +18,28 @@
   <div>
     <div class="row">
       <div class="col-md-4">
-          <mat-form-field>
-            <mat-label>Category</mat-label>
-            <mat-select>
-              <mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">
-                <p>None</p>
-              </mat-option>
-              <mat-option *ngFor="let category of categories$" (onSelectionChange)="onChange(category.id, 'categoryId')" value="category.name">
-                <p>{{ category.name }}</p>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+        <mat-form-field>
+          <mat-label>Category</mat-label>
+          <mat-select>
+            <mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">
+              <p>None</p>
+            </mat-option>
+            <mat-option *ngFor="let category of categories$" (onSelectionChange)="onChange(category.id, 'categoryId')"
+                        value="category.name">
+              <p>{{ category.name }}</p>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div class="col-md-4">
         <mat-form-field>
           <mat-label>Sub category</mat-label>
           <mat-select>
             <mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">
-                <p>None</p>
+              <p>None</p>
             </mat-option>
-            <mat-option *ngFor="let sub_category of subCategories$" (onSelectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.name">
+            <mat-option *ngFor="let sub_category of subCategories$"
+                        (onSelectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.name">
               <p>{{ sub_category.name }}</p>
             </mat-option>
           </mat-select>
@@ -38,9 +50,10 @@
           <mat-label>Currency</mat-label>
           <mat-select>
             <mat-option (onSelectionChange)="onChange(null, 'currencyId')" value="">
-                <p>None</p>
+              <p>None</p>
             </mat-option>
-            <mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')" value="currency.name">
+            <mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"
+                        value="currency.name">
               <p>{{ currency.code }}</p>
             </mat-option>
           </mat-select>
@@ -53,35 +66,35 @@
         <table mat-table [dataSource]="costs$" class="col-md-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef> Title </th>
+            <th mat-header-cell *matHeaderCellDef> Title</th>
             <td mat-cell *matCellDef="let cost"> {{cost.title}} </td>
-            <td mat-footer-cell *matFooterCellDef> Total </td>
+            <td mat-footer-cell *matFooterCellDef> Total</td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="comment">
-            <th mat-header-cell *matHeaderCellDef> Comment </th>
+            <th mat-header-cell *matHeaderCellDef> Comment</th>
             <td mat-cell *matCellDef="let cost"> {{cost.comment}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_category">
-            <th mat-header-cell *matHeaderCellDef> Category </th>
+            <th mat-header-cell *matHeaderCellDef> Category</th>
             <td mat-cell *matCellDef="let cost"> {{cost?.bill_category?.name}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_sub_category">
-            <th mat-header-cell *matHeaderCellDef> Sub category </th>
+            <th mat-header-cell *matHeaderCellDef> Sub category</th>
             <td mat-cell *matCellDef="let cost"> {{cost?.bill_sub_category?.name}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef> Image </th>
+            <th mat-header-cell *matHeaderCellDef> Image</th>
             <td mat-cell *matCellDef="let transaction"> {{transaction.image}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
@@ -102,11 +115,98 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
+  </div>
+  <div class="newBill row mt-2">
+    <div class="col-md-10"></div>
+    <div class="col-md-2 text-right">
+      <button class="newBillButton" mat-button (click)="newBill(true)">New bill</button>
     </div>
-    <div class="newBill row mt-2">
-      <div class="col-md-10"></div>
-      <div class="col-md-2 text-right">
-        <button class="newBillButton" mat-button>New bill</button>
-      </div>
+  </div>
+</div>
+
+<div class="bills p-2" *ngIf="newBillState">
+  <form (submit)="newBillSubmit(category_id, sub_category_id, currency_id, title, comment, price)">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <h1>Add new costs</h1>
     </div>
+    <div class="col-md-6 text-right backButton col-sm-12">
+      <button class="newBillButton" mat-button (click)="newBill(false)">Back</button>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="col-md-4">
+      <mat-form-field>
+        <mat-label>Category</mat-label>
+        <mat-select name="category_id" [ngModel]="category_id">
+          <mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">
+            <p>None</p>
+          </mat-option>
+          <mat-option *ngFor="let category of categories$" (selectionChange)="onChange(category.id, 'categoryId')"
+                      value="category.id">
+            <p>{{ category.name }}</p>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field>
+        <mat-label>Sub category</mat-label>
+        <mat-select name="sub_category_id" [ngModel]="sub_category_id">
+          <mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">
+            <p>None</p>
+          </mat-option>
+          <mat-option *ngFor="let sub_category of subCategories$"
+                      (selectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.id">
+            <p>{{ sub_category.name }}</p>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field>
+        <mat-label>Currency</mat-label>
+        <mat-select name="currency_id" [ngModel]="currency_id">
+          <mat-option (selectionChange)="onChange(null, 'currencyId')" value="">
+            <p>None</p>
+          </mat-option>
+          <mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"
+                      value="currency.id">
+            <p>{{ currency.code }}</p>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <mat-form-field class="w-100">
+      <mat-label>Title</mat-label>
+      <input type="email" matInput required name="title" [(ngModel)]="title">
+    </mat-form-field>
+  </div>
+  <div class="col-md-12">
+    <mat-form-field class="w-100">
+      <mat-label>Comment</mat-label>
+      <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment" [ngModel]="comment"></textarea>
+      <!--input type="email" matInput required name="title" [(ngModel)]="title"-->
+    </mat-form-field>
+  </div>
+  <div class="col-md-10">
+  </div>
+  <div class="col-md-2 text-right billPrice">
+    <mat-form-field>
+      <mat-label>Price</mat-label>
+      <input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">
+    </mat-form-field>
+  </div>
+  <div class="row">
+    <div class="col-md-10">
+    </div>
+    <div class="col-md-2 text-right saveButton col-sm-12">
+      <button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>
+      <!--button class="newBillButton" mat-button (click)="newBillSubmit(">Save</button-->
+    </div>
+  </div>
+  </form>
 </div>
