--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,6 +14,7 @@
   </form>
 
   <form (submit)="login(email, password)" *ngIf="userActive">
+    <img src="https://image.freepik.com/vettori-gratuito/consulenza-finanziaria-orientamento-finanziario-consulente-aziendale-assistenza-agli-investimenti-disegno-di-linea-di-disegno-di-linea-di-disegno-di-linea-di-libro-disegno-per-la-grafica-mobile-e-web_1200-303.jpg" width="100%" height="400" alt="Italian Trulli">
     <h3 class="mb-3">Login</h3>
     <mat-form-field>
       <mat-label>Username</mat-label>
