--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -2,11 +2,15 @@
   <div class="row">
     <!--h1>Costs</h1-->
     <div class="col-md-2 col-sm-6">
-      <h1 class="m-auto"><i class="material-icons">money_off</i> Costs</h1>
+      <h1 class="m-auto" *ngIf="buttonSwitchMessage != 'Switch to costs!'"><i class="material-icons">money_off</i> Costs
+      </h1>
+      <h1 class="m-auto" *ngIf="buttonSwitchMessage === 'Switch to costs!'"><i class="material-icons">attach_money</i>Profits
+      </h1>
     </div>
     <div class="col-md-1 col-sm-6">
       <div class="m-auto">
-        <button mat-button (click)="newBill(true)"><i class="material-icons">swap_vert</i></button>
+        <button mat-button (click)="changeBills(categoryId, subCategoryId, currencyId)"
+                matTooltip="{{buttonSwitchMessage}}"><i class="material-icons">swap_vert</i></button>
       </div>
     </div>
     <div class="col-md-9">
@@ -17,6 +21,135 @@
   </div>
   <div>
     <div class="row">
+      <div class="col-md-4">
+        <mat-form-field>
+          <mat-label>Category</mat-label>
+          <mat-select (selectionChange)="onChange($event, 'categoryId')">
+            <mat-option value=null>
+              <p>None</p>
+            </mat-option>
+            <mat-option *ngFor="let category of categories$" [value]="category.id">
+              <p>{{ category.name }}</p>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+        <mat-form-field>
+          <mat-label>Sub category</mat-label>
+          <mat-select (selectionChange)="onChange($event, 'subCategoryId')">
+            <mat-option value="null">
+              <p>None</p>
+            </mat-option>
+            <mat-option *ngFor="let sub_category of subCategories$" [value]="sub_category.id">
+              <p>{{ sub_category.name }}</p>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+        <mat-form-field>
+          <mat-label>Currency</mat-label>
+          <mat-select (selectionChange)="onChange($event, 'currencyId')">
+            <mat-option value="null">
+              <p>None</p>
+            </mat-option>
+            <mat-option *ngFor="let currency of currencies$" [value]="currency.id">
+              <p>{{ currency.code }}</p>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-12">
+        <h4>Results</h4>
+      </div>
+      <div class="col-md-12 mt-2 mat-elevation-z8" style="overflow-x: scroll">
+        <table mat-table [dataSource]="bills$" class="col-md-12">
+          <!-- Item Column -->
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef class="firstTableRow"> Title</th>
+            <td mat-cell *matCellDef="let bill"> {{bill.title}} </td>
+            <td mat-footer-cell *matFooterCellDef> Total</td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="comment">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Comment</th>
+            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill.comment}} </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="bill_category">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Category</th>
+            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.bill_category?.name}} </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="bill_sub_category">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Sub category</th>
+            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.bill_sub_category?.name}} </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Image</th>
+            <td mat-cell *matCellDef="let bill" class="text-center">
+              <mat-checkbox class="example-margin" *ngIf="bill.image" checked="checked"
+                            disabled></mat-checkbox>
+              <mat-checkbox class="example-margin" *ngIf="!bill.image"
+                            disabled></mat-checkbox>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Show details table row button -->
+          <ng-container matColumnDef="showDetails">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> ... </th>
+            <td mat-cell *matCellDef class="text-center">
+              <button mat-button matTooltip="Show details"><i class="material-icons">open_in_new</i></button>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Cost Column >
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef> Price </th>
+            <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
+            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+
+            <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}} </td>
+          </ng-container-->
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns" class="tableHeader"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data"></tr>
+          <tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+    </div>
+  </div>
+  <div class="newBill row mt-2">
+    <div class="col-md-10"></div>
+    <div class="col-md-2 text-right">
+      <button class="newBillButton" mat-button (click)="newBill(true)">New bill</button>
+    </div>
+  </div>
+</div>
+
+<div class="bills p-2" *ngIf="newBillState">
+  <form (submit)="newBillSubmit(categoryId, subCategoryId, currencyId, title, comment, price)">
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <h1 *ngIf="buttonSwitchMessage != 'Switch to costs!'">Add new costs</h1>
+        <h1 *ngIf="buttonSwitchMessage == 'Switch to costs!'">Add new profits</h1>
+      </div>
+      <div class="col-md-6 text-right backButton col-sm-12">
+        <button class="newBillButton" mat-button (click)="newBill(false)">Back</button>
+      </div>
+
       <div class="col-md-4">
         <mat-form-field>
           <mat-label>Category</mat-label>
@@ -60,71 +193,40 @@
         </mat-form-field>
       </div>
       <div class="col-md-12">
-        <h4>Results</h4>
+        <mat-form-field class="w-100">
+          <mat-label>Title</mat-label>
+          <input type="email" matInput required name="title" [(ngModel)]="title">
+        </mat-form-field>
       </div>
-      <div class="col-md-12 mt-2 mat-elevation-z8" style="overflow-x: scroll">
-        <table mat-table [dataSource]="costs$" class="col-md-12">
-          <!-- Item Column -->
-          <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef> Title</th>
-            <td mat-cell *matCellDef="let cost"> {{cost.title}} </td>
-            <td mat-footer-cell *matFooterCellDef> Total</td>
-          </ng-container>
-
-          <!-- Item Column -->
-          <ng-container matColumnDef="comment">
-            <th mat-header-cell *matHeaderCellDef> Comment</th>
-            <td mat-cell *matCellDef="let cost"> {{cost.comment}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <!-- Item Column -->
-          <ng-container matColumnDef="bill_category">
-            <th mat-header-cell *matHeaderCellDef> Category</th>
-            <td mat-cell *matCellDef="let cost"> {{cost?.bill_category?.name}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <!-- Item Column -->
-          <ng-container matColumnDef="bill_sub_category">
-            <th mat-header-cell *matHeaderCellDef> Sub category</th>
-            <td mat-cell *matCellDef="let cost"> {{cost?.bill_sub_category?.name}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <!-- Item Column -->
-          <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef> Image</th>
-            <td mat-cell *matCellDef="let transaction"> {{transaction.image}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <!-- Cost Column >
-          <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef> Price </th>
-            <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-
-            <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}} </td>
-          </ng-container-->
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns" class="tableHeader"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data"></tr>
-          <tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <div class="col-md-12">
+        <mat-form-field class="w-100">
+          <mat-label>Comment</mat-label>
+          <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment"
+                    [(ngModel)]="comment"></textarea>
+        </mat-form-field>
       </div>
+      <div class="col-md-10">
+      </div>
+      <div class="col-md-2 text-right billPrice">
+        <mat-form-field>
+          <mat-label>Price</mat-label>
+          <input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">
+        </mat-form-field>
+      </div>
+      <div class="row">
+        <div class="col-md-10">
+        </div>
+        <div class="col-md-2 text-right saveButton col-sm-12">
+          <button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>
+        </div>
+      </div>
+
+
     </div>
-  </div>
-  <div class="newBill row mt-2">
-    <div class="col-md-10"></div>
-    <div class="col-md-2 text-right">
-      <button class="newBillButton" mat-button (click)="newBill(true)">New bill</button>
-    </div>
-  </div>
+  </form>
 </div>
 
-<div class="bills p-2" *ngIf="newBillState">
+<!--div class="bills p-2" *ngIf="newBillState">
   <form (submit)="newBillSubmit(category_id, sub_category_id, currency_id, title, comment, price)">
   <div class="row">
     <div class="col-md-6 col-sm-12">
@@ -189,7 +291,7 @@
     <mat-form-field class="w-100">
       <mat-label>Comment</mat-label>
       <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment" [ngModel]="comment"></textarea>
-      <!--input type="email" matInput required name="title" [(ngModel)]="title"-->
+      Ovo zakomentirati<input type="email" matInput required name="title" [(ngModel)]="title">
     </mat-form-field>
   </div>
   <div class="col-md-10">
@@ -205,8 +307,8 @@
     </div>
     <div class="col-md-2 text-right saveButton col-sm-12">
       <button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>
-      <!--button class="newBillButton" mat-button (click)="newBillSubmit(">Save</button-->
+      Ovo zakomentirati<button class="newBillButton" mat-button (click)="newBillSubmit(">Save</button>
     </div>
   </div>
   </form>
-</div>
+</div-->
