--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register p-3">
-  <form (submit)="registerSubmit(address, birthDate, city_id, confirmPassword, email, firstName, gender, lastName, password, country_id)">
+  <form (submit)="registerSubmit(regRequest)">
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <h3 class="mb-3">Register</h3>
@@ -8,24 +8,24 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>First name</mat-label>
-            <input type="text" matInput required name="firstName" [(ngModel)]="firstName">
+            <input type="text" matInput required name="firstName" [(ngModel)]="regRequest.firstName">
           </mat-form-field>
         </div>
         <div>
           <mat-form-field class="w-100">
             <mat-label>Last name</mat-label>
-            <input type="text" matInput required name="lastName" [(ngModel)]="lastName">
+            <input type="text" matInput required name="lastName" [(ngModel)]="regRequest.lastName">
           </mat-form-field>
         </div>
         <div>
           <mat-form-field class="w-100">
             <mat-label>Email</mat-label>
-            <input type="email" matInput required name="email" [(ngModel)]="email">
+            <input type="email" matInput required name="email" [(ngModel)]="regRequest.email">
           </mat-form-field>
         </div>
         <div>
           <mat-form-field class="w-100">
-            <input matInput [matDatepicker]="picker" name="birthDate" [(ngModel)]="birthDate" placeholder="Birth date" required>
+            <input matInput [matDatepicker]="picker" name="birthDate" [(ngModel)]="regRequest.birthDate" placeholder="Birth date" required>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <!--mat-datepicker #picker></--mat-datepicker-->
             <mat-datepicker touchUi #picker></mat-datepicker>
@@ -36,7 +36,7 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>Country</mat-label>
-            <mat-select name="country_id" [(ngModel)]="country_id" (selectionChange)="onCountryChange($event)">
+            <mat-select name="country_id" [(ngModel)]="regRequest.country_id" (selectionChange)="onCountryChange($event)">
               <mat-option *ngFor="let country of countries$ | async" [value]="country.id">
                 {{country.name}}
               </mat-option>
@@ -46,7 +46,7 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>City</mat-label>
-            <mat-select name="city_id" [(ngModel)]="city_id">
+            <mat-select name="city_id" [(ngModel)]="regRequest.city_id">
               <mat-option *ngFor="let city of cities$" [value]="city.id" >
                 {{city.name}}
               </mat-option>
@@ -56,14 +56,14 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>Address</mat-label>
-            <input type="text" matInput required name="address" [(ngModel)]="address">
+            <input type="text" matInput required name="address" [(ngModel)]="regRequest.address">
           </mat-form-field>
         </div>
         <div>
           <!--div class="mb-2">
             <label id="example-radio-group-label">Gender</label>
           </div-->
-          <mat-radio-group aria-label="Select an option" required name="gender" [(ngModel)]="gender">
+          <mat-radio-group aria-label="Select an option" required name="gender" [(ngModel)]="regRequest.gender">
             <div class="row">
               <div class="col-md-6">
                 <mat-radio-button value="male" class="mb-1">Male</mat-radio-button>
@@ -79,7 +79,7 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>Password</mat-label>
-            <input type="password" matInput required name="password" [(ngModel)]="password">
+            <input type="password" matInput required name="password" [(ngModel)]="regRequest.password">
           </mat-form-field>
         </div>
       </div>
@@ -87,7 +87,7 @@
         <div>
           <mat-form-field class="w-100">
             <mat-label>Confirm password</mat-label>
-            <input type="password" matInput required name="confirmPassword" [(ngModel)]="confirmPassword">
+            <input type="password" matInput required name="confirmPassword" [(ngModel)]="regRequest.confirmPassword">
           </mat-form-field>
         </div>
       </div>
