--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -19,7 +19,7 @@
           <button class="newBillButton button" mat-button>Edit profile</button>
         </div>
         <div class="mb-1">
-          <button class="newBillButton button mb-1" mat-button>Change password</button>
+          <button class="newBillButton button mb-1" mat-button (click)="openDialog()">Change password</button>
         </div>
       </div>
     </div>
