--- a/src/custom.scss
+++ b/src/custom.scss
@@ -136,3 +136,11 @@ $colums: 12;
 /deep/ .mat-toolbar {
   z-index: 2;
 }
+
+.p-relative {
+  position: relative;
+}
+
+.p-absolute {
+  position: absolute;
+}
