User edit profile form

--- a/src/app/profile/change_password.html
+++ b/src/app/profile/change_password.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div mat-dialog-content class="text-center">
   <p>Change password</p>
   <mat-form-field>
     <mat-label>Current password</mat-label>
@@ -13,8 +13,11 @@
     <input type="password" matInput required name="confirmPassword" [(ngModel)]="data.confirmPassword">
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button (click)="changePassword(data)">Change</button>
-  <!--button mat-button [mat-dialog-close]="data.newPassword" cdkFocusInitial>Ok</button-->
+<div mat-dialog-actions class="w-100">
+  <div class="w-50 m-auto text-center">
+    <button mat-button class="w-90" (click)="onNoClick()">No Thanks</button>
+  </div>
+  <div class="w-50 m-auto text-center">
+    <button mat-button class="w-90" (click)="changePassword(data)">Change</button>
+  </div>
 </div>
