--- a/src/custom.scss
+++ b/src/custom.scss
@@ -144,3 +144,15 @@ $colums: 12;
 .p-absolute {
   position: absolute;
 }
+
+.w-50 {
+  width: 50%;
+}
+
+.w-90 {
+  width: 90%;
+}
+
+.max-height-500 {
+  max-height: 500px;
+}
