--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,3 +1,11 @@
-<div ng-if="chart">
-  <canvas id="canvas">{{ chart }}</canvas>
-</div>
+<!--div ng-if="chart">
+  <canvas id="canvas" width="500px" height="200px">{{ chart }}</canvas>
+</div-->
+
+<fusioncharts
+  [type]="type"
+  [width]="width"
+  [height]="height"
+  [dataSource]="dataSource"
+>
+</fusioncharts>
