--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -155,8 +155,11 @@
             <div class="col-md-3 col-sm-6 bold">
               <p>Default currency:</p>
             </div>
-            <div class="col-md-3 col-sm-6 text-center">
-              <p>EUR</p>
+            <div *ngIf="user.currency_id" class="col-md-3 col-sm-6 text-center">
+              <p>{{ user.currency.code }}</p>
+            </div>
+            <div *ngIf="!user.currency_id" class="col-md-3 col-sm-6 text-center">
+              <p></p>
             </div>
             <div class="col-md-6">
             </div>
