--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -3,7 +3,7 @@
 </div-->
 
 <div class="mobileGraph">
-  <fusioncharts
+  <fusioncharts *ngIf="bills"
   [type]="type"
   [width]="width"
   [height]="height"
