--- a/src/app/profile/change_password.html
+++ b/src/app/profile/change_password.html
@@ -15,7 +15,7 @@
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 m-auto text-center">
-    <button mat-button class="w-90" (click)="onNoClick()">No Thanks</button>
+    <button mat-button class="w-90" cdkFocusInitial (click)="onNoClick()">No Thanks</button>
   </div>
   <div class="w-50 m-auto text-center">
     <button mat-button class="w-90" (click)="changePassword(data)">Change</button>
