--- a/src/app/profile/edit_profile.html
+++ b/src/app/profile/edit_profile.html
@@ -15,7 +15,7 @@
   </mat-form-field>
   <mat-form-field class="w-100">
     <mat-label>Country</mat-label>
-    <mat-select name="country_id" [(ngModel)]="data.country_id" (selectionChange)="onCountryChange($event)">
+    <mat-select name="country_id" [(ngModel)]="data.country_id" (selectionChange)="onCountryChange($event, data)">
       <mat-option *ngFor="let country of data.countries$ | async" [value]="country.id">
         {{country.name}}
       </mat-option>
@@ -68,6 +68,6 @@
     <button mat-button class="w-90" (click)="onNoClick()">No Thanks</button>
   </div>
   <div class="w-50 m-auto text-center">
-    <button mat-button class="w-90" [mat-dialog-close]="edited" (click)="editProfile(data)">Save</button>
+    <button mat-button class="w-90" [mat-dialog-close]="data" (click)="editProfile(data)">Save</button>
   </div>
 </div>
