--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -1,17 +1,17 @@
 <div class="bills p-2" *ngIf="!newBillState">
   <div class="row">
     <!--h1>Costs</h1-->
-    <div class="col-md-2 col-sm-6">
+    <div class="col-md-2 col-sm-12">
       <h1 class="m-auto" *ngIf="buttonSwitchMessage != 'Switch to costs!'"><i class="material-icons">money_off</i> Costs
       </h1>
       <h1 class="m-auto" *ngIf="buttonSwitchMessage === 'Switch to costs!'"><i class="material-icons">attach_money</i>Profits
       </h1>
     </div>
-    <div class="col-md-2 col-sm-6">
+    <div class="col-md-2 col-sm-12 actionButton">
       <div class="m-auto p-relative">
         <button mat-button (click)="changeBills(categoryId, subCategoryId, currencyId)"
                 matTooltip="{{buttonSwitchMessage}}"><i class="material-icons">swap_vert</i></button>
-        <div class="info p-absolute" mat-button matTooltip="This button will change type of bills,
+        <div class="info p-absolute" mat-button  matTooltip="This button will change type of bills,
         you can see profits or costs using switching."><i class="material-icons">info</i></div>
         <!--button class="info" mat-button matTooltip="This button will change type of bills,
         you can see profits or costs using switching."><i class="material-icons">info</i></button-->
@@ -48,7 +48,7 @@
 
     </div>
 
-    <div class="col-md-2 col-sm-6">
+    <div class="col-md-2 col-sm-12 actionButton">
       <div class="m-auto p-relative">
         <button class="pdfReport" mat-button (click)="printReport(categoryId, subCategoryId, currencyId)"><i
               class="material-icons">picture_as_pdf</i></button>
@@ -63,12 +63,12 @@
   </div>
 
 
-  <div>
+  <div class="filters">
     <h3>Filter by</h3>
   </div>
-  <div>
+  <div class="filters">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field>
           <mat-label>Category</mat-label>
           <mat-select (selectionChange)="onChange($event, 'categoryId')">
@@ -81,7 +81,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field>
           <mat-label>Sub category</mat-label>
           <mat-select (selectionChange)="onChange($event, 'subCategoryId')">
@@ -94,7 +94,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field>
           <mat-label>Currency</mat-label>
           <mat-select (selectionChange)="onChange($event, 'currencyId')">
@@ -111,7 +111,7 @@
         <h4>Results</h4>
       </div>
       <div class="col-md-12 mt-2 mat-elevation-z8" style="overflow-x: scroll">
-        <table mat-table [dataSource]="bills$" class="col-md-12">
+        <table mat-table [dataSource]="bills$" class="col-md-12 col-sm-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef class="firstTableRow"> Title</th>
@@ -120,9 +120,9 @@
           </ng-container>
 
           <!-- Item Column -->
-          <ng-container matColumnDef="comment">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Comment</th>
-            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill.comment}} </td>
+          <ng-container matColumnDef="comment" class="tableMobile">
+            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Comment</th>
+            <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill.comment}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
@@ -134,16 +134,30 @@
           </ng-container>
 
           <!-- Item Column -->
-          <ng-container matColumnDef="bill_sub_category">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Sub category</th>
-            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.bill_sub_category?.name}} </td>
+          <ng-container matColumnDef="bill_sub_category" class="tableMobile">
+            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Sub category</th>
+            <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill?.bill_sub_category?.name}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
-          <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Image</th>
-            <td mat-cell *matCellDef="let bill" class="text-center">
+          <ng-container matColumnDef="bill_price">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Price </th>
+            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.price}} </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="bill_currency">
+            <th mat-header-cell *matHeaderCellDef class="text-center"> Currency </th>
+            <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.currency?.code}} </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <!-- Item Column -->
+          <ng-container matColumnDef="image" class="tableMobile">
+            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Image</th>
+            <td mat-cell *matCellDef="let bill" class="text-center tableMobile">
               <mat-checkbox class="example-margin" *ngIf="bill.image" checked="checked"
                             disabled></mat-checkbox>
               <mat-checkbox class="example-margin" *ngIf="!bill.image"
@@ -174,13 +188,13 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data"></tr>
           <tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" (page)="testFun($event)" length="100" showFirstLastButtons></mat-paginator>
       </div>
     </div>
   </div>
   <div class="newBill row mt-2">
     <div class="col-md-10"></div>
-    <div class="col-md-2 text-right">
+    <div class="col-md-2 col-sm-12 text-right">
       <button class="newBillButton" mat-button (click)="newBill(true)">New bill</button>
     </div>
   </div>
