--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar color="primary">E-Wallet v1.0</mat-toolbar>
+    <mat-toolbar color="primary" routerLink="/dashboard">E-Wallet v1.0</mat-toolbar>
       <!--mat-sidenav #appDrawer mode="over" opened="false"-->
         <mat-nav-list>
           <app-menu-list-item *ngFor="let item of navItems" [item]="item" [routerLink]="[item.route]"></app-menu-list-item>
@@ -28,39 +28,39 @@
           <div class="p-5 dashboard-content">
             <router-outlet></router-outlet>
           </div>
-          <div class="pl-2 pr-2">
-            <h3 class="w-100 text-center">News and information</h3>
-            <div *ngFor="let n of news">
-              <div class="p-1 mb-1" style="border: 1px solid black">
-                <div class="row">
-                  <div class="col-md-6 col-sm-6">
-                    <h5>Title: {{ n.title }}</h5>
-                  </div>
-                  <div class="col-md-6 col-sm-6 text-right">
-                    <p>Created by: {{ n.user.role.role_name }}</p>
-                  </div>
-                  <div class="col-md-12 col-sm-12">
-                    <p>Date: {{ n.created }}</p>
-                  </div>
-                  <div class="col-md-12 col-sm-12">
-                    <p>{{ n.content }}</p>
-                  </div>
-                </div>
-                <!--p>Date: {{ n.created }}</p>
-                <p>{{ n.content }}</p-->
-                <div class="text-right w-100">
-                  <button mat-button class="w-10" (click)="clear(n.id)">Clear</button>
-                </div>
-              </div>
+          <!--<div class="pl-2 pr-2">-->
+            <!--<h3 class="w-100 text-center">News and information</h3>-->
+            <!--<div *ngFor="let n of news">-->
+              <!--<div class="p-1 mb-1" style="border: 1px solid black">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-md-6 col-sm-6">-->
+                    <!--<h5>Title: {{ n.title }}</h5>-->
+                  <!--</div>-->
+                  <!--<div class="col-md-6 col-sm-6 text-right">-->
+                    <!--<p>Created by: {{ n.user.role.role_name }}</p>-->
+                  <!--</div>-->
+                  <!--<div class="col-md-12 col-sm-12">-->
+                    <!--<p>Date: {{ n.created }}</p>-->
+                  <!--</div>-->
+                  <!--<div class="col-md-12 col-sm-12">-->
+                    <!--<p>{{ n.content }}</p>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;p>Date: {{ n.created }}</p>-->
+                <!--<p>{{ n.content }}</p&ndash;&gt;-->
+                <!--<div class="text-right w-100">-->
+                  <!--<button mat-button class="w-10" (click)="clear(n.id)">Clear</button>-->
+                <!--</div>-->
+              <!--</div>-->
 
 
-            </div>
-            <!--div class="p-1" style="border: 1px solid black">
-              <h5>New categories</h5>
-              <p>Date: 10.08.2018</p>
-              <p>Added new categories food, drinks, auto</p>
-            </div-->
-          </div>
+            <!--</div>-->
+            <!--&lt;!&ndash;div class="p-1" style="border: 1px solid black">-->
+              <!--<h5>New categories</h5>-->
+              <!--<p>Date: 10.08.2018</p>-->
+              <!--<p>Added new categories food, drinks, auto</p>-->
+            <!--</div&ndash;&gt;-->
+          <!--</div>-->
 
           <!--Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, itaque cumque at, est eius veniam molestiae praesentium facere delectus porro repudiandae beatae error amet? Commodi, optio impedit! Nihil, atque qui!
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, itaque cumque at, est eius veniam molestiae praesentium facere delectus porro repudiandae beatae error amet? Commodi, optio impedit! Nihil, atque qui!
