--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -12,16 +12,16 @@
   </fusioncharts>
   <div class="row pr-3 pl-3">
     <div class="col-md-3 col-sm-12">
-      <p>Min cost: {{bills.min_cost}}</p>
+      <p>Min cost: {{bills?.min_cost}}</p>
     </div>
     <div class="col-md-3 col-sm-12">
-      <p>Max cost: {{bills.max_cost}}</p>
+      <p>Max cost: {{bills?.max_cost}}</p>
     </div>
     <div class="col-md-3 col-sm-12">
-      <p>Min profit: {{bills.min_profit}}</p>
+      <p>Min profit: {{bills?.min_profit}}</p>
     </div>
     <div class="col-md-3 col-sm-12">
-      <p>Max profit: {{bills.max_profit}}</p>
+      <p>Max profit: {{bills?.max_profit}}</p>
     </div>
   </div>
 </div>
