add new bill modal and creating new bill

--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -195,7 +195,7 @@
   <div class="newBill row mt-2">
     <div class="col-md-10"></div>
     <div class="col-md-2 col-sm-12 text-right">
-      <button class="newBillButton" mat-button (click)="newBill(true)">New bill</button>
+      <button class="newBillButton" mat-button (click)="openDialogNewBill(true)">New bill</button>
     </div>
   </div>
 </div>
