--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-8">
       </div>
-      <div class="col-md-2 col-sm-12">
+      <div class="col-md-2 col-sm-12 actionButton">
         <div class="mb-1 mt-1">
           <button class="newBillButton button" mat-button (click)="openDialogEditProfile()">Edit profile</button>
         </div>
