--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -16,6 +16,13 @@
 .profileAvatar {
   width: 100%;
   height: 100%;
+  @media (min-width: 768px) {
+    width: 200px;
+    height: 200px;
+  }
+  @media (max-width: 767px) {
+    max-height: 350px;
+  }
 }
 
 .breakSection {
@@ -54,6 +61,13 @@
   }
   &:hover > img {
     opacity: 0.7;
+  }
+}
+
+.profile .imageWeapper {
+  @media (min-width: 767px) {
+    width: 200px;
+    height: 200px;
   }
 }
 
