--- a/src/app/bills/bills.component.scss
+++ b/src/app/bills/bills.component.scss
@@ -145,6 +145,6 @@ tr.mat-footer-row {
 
 /deep/ .mat-table {
   @media (max-width: 767px) {
-    width: 110% !important;
+    //width: 110% !important;
   }
 }
