--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
   <div>
     <div class="row">
       <div class="col-md-2 col-sm-12">
-        <div class="imageWeapper">
+        <!--div class="imageWeapper">
           <img class="profileAvatar"
             src="{{url}}/dir/{{user.image.file_name}}"
           />
@@ -10,7 +10,7 @@
             <input type="file" hidden #imageInput (change)="image_selected($event)">
             <button class="newBillButton" mat-button (click)="imageInput.click()">Change picture</button>
           </div>
-        </div>
+        </div-->
       </div>
       <div class="col-md-8">
       </div>
