--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -107,23 +107,23 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-12" *ngIf="bills$.length > 0">
         <h4>Results</h4>
       </div>
-      <div class="col-md-12 mt-2 mat-elevation-z8" style="overflow-x: scroll">
+      <div class="col-md-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0" style="overflow-x: scroll">
         <table mat-table [dataSource]="bills$" class="col-md-12 col-sm-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef class="firstTableRow"> Title</th>
             <td mat-cell *matCellDef="let bill"> {{bill.title}} </td>
-            <td mat-footer-cell *matFooterCellDef> Total</td>
+            <td mat-footer-cell *matFooterCellDef>Total</td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="comment" class="tableMobile">
             <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Comment</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill.comment}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
           </ng-container>
 
           <!-- Item Column -->
@@ -137,7 +137,7 @@
           <ng-container matColumnDef="bill_sub_category" class="tableMobile">
             <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Sub category</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill?.bill_sub_category?.name}} </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
           </ng-container>
 
           <!-- Item Column -->
@@ -163,14 +163,14 @@
               <mat-checkbox class="example-margin" *ngIf="!bill.image"
                             disabled></mat-checkbox>
             </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
           </ng-container>
 
           <!-- Show details table row button -->
           <ng-container matColumnDef="showDetails">
             <th mat-header-cell *matHeaderCellDef class="text-center"> ...</th>
-            <td mat-cell *matCellDef class="text-center">
-              <button mat-button matTooltip="Show details"><i class="material-icons">open_in_new</i></button>
+            <td mat-cell *matCellDef="let bill" class="text-center">
+              <button mat-button matTooltip="Show details" (click)="openDialogShowBill(bill)"><i class="material-icons">open_in_new</i></button>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
@@ -188,7 +188,7 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data"></tr>
           <tr mat-footer-row *matFooterRowDef="displayedColumns" class="tableFooter"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" (page)="testFun($event)" length="100" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" (page)="changeOffsetLimit($event)" length="{{billsLengthList}}" showFirstLastButtons></mat-paginator>
       </div>
     </div>
   </div>
