--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,4 +1,4 @@
-<div class="pl-2 pr-2">
+<div class="pl-2 pr-2" *ngIf="news.length > 0">
   <h3 class="w-100 text-center">News and information</h3>
   <div *ngFor="let n of news">
     <div class="p-1 mb-1" style="border: 1px solid black">
