--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -13,17 +13,24 @@
     box-shadow: unset;
     padding: 10px 10px;
     width: 90%;
-    margin-top: 20%;
+    //margin-top: 5%;
+    transform: unset;
+    overflow-y: scroll;
+    top: 0;
+    left: 0;
+    .scroll-content {
+      padding-top: 50px !important;
+    }
   }
-  @media (max-height: 750px) {
-    margin-top: 25%;
-  }
-  @media (max-width: 360px) {
-    margin-top: 30%;
-  }
-  @media (max-width: 320px) {
-    margin-top: 45%;
-  }
+  //@media (max-height: 750px) {
+  //  margin-top: 25%;
+  //}
+  //@media (max-width: 360px) {
+  //  margin-top: 30%;
+  //}
+  //@media (max-width: 320px) {
+  //  margin-top: 45%;
+  //}
 
 }
 
